tests/NormalTests/paczka1/small_fuzzy/49637229.err
Error in line 3: yLlLvOgUdp A479 19,6
Error in line 6: Z7lLRscfzT A479 5,4
